projeto/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ALL
    ASSERTS
    ASYNC
    AT_SIGN
    BREAK
    CASE
    CATCH
    CLASS
    COMMENT
    COMMERCIAL_E
    CONST
    CONTINUE
    COVARIANT
    DEFAULT
    DEFERRED
    DO
    DOT
    DYNAMIC
    ENUM
    EXCLAMATION
    EXPORT
    EXTENDS
    EXTENSION
    EXTERNAL
    FACTORY
    FALSE
    FINAL
    FINALLY
    FUNCTION
    GET
    HIDE
    IMPLEMENTS
    IMPORTS
    INTERFACE
    LATE
    LBRACKET
    LIBRARY
    MIXIN
    NEW
    NULL
    ON
    OPERATOR
    PART
    RBRACKET
    REQUIRED
    RETHROW
    SET
    SHOW
    SPACE
    STATIC
    SUPER
    SWITCH
    SYNC
    THIS
    THROW
    TRUE
    TRY
    TYPEDEF
    VAR
    WITH
    YIELD

Grammar

Rule 0     S' -> program
Rule 1     program -> funcdecl
Rule 2     program -> funcdecl program
Rule 3     program -> declvar
Rule 4     program -> declvar program
Rule 5     declvar -> tipo assign SEMI_COLON
Rule 6     declvar -> tipo INTERROGATION ID SEMI_COLON
Rule 7     funcdecl -> signature body
Rule 8     signature -> tipo ID LPAREN sigParams RPAREN
Rule 9     signature -> tipo ID LPAREN RPAREN
Rule 10    sigParams -> tipo ID
Rule 11    sigParams -> tipo ID VIRGULA sigParams
Rule 12    body -> LCHAV stms RCHAV
Rule 13    body -> LCHAV RCHAV
Rule 14    bodyorstm -> stm
Rule 15    bodyorstm -> body
Rule 16    bodyorstm -> body ELSE stm
Rule 17    bodyorstm -> body ELSE body
Rule 18    stms -> stm
Rule 19    stms -> stm stms
Rule 20    stm -> exp SEMI_COLON
Rule 21    stm -> WHILE LPAREN exp RPAREN body
Rule 22    stm -> RETURN exp SEMI_COLON
Rule 23    stm -> IF LPAREN exp RPAREN bodyorstm
Rule 24    stm -> FOR LPAREN tiposassign INTERROGATION SEMI_COLON exp INTERROGATION SEMI_COLON exp INTERROGATION RPAREN body
Rule 25    stm -> FOR LPAREN tipo ID IN ID RPAREN body
Rule 26    stm -> declvar
Rule 27    tiposassign -> tipo assign
Rule 28    tiposassign -> tipo tipoassigns
Rule 29    tipoassigns -> assign
Rule 30    tipoassigns -> assign VIRGULA tipoassigns
Rule 31    call -> ID LPAREN params RPAREN
Rule 32    call -> ID LPAREN RPAREN
Rule 33    exp -> exp MORE exp
Rule 34    exp -> exp LESS exp
Rule 35    exp -> exp MULTIPLICATION exp
Rule 36    exp -> exp DIVIDE exp
Rule 37    exp -> exp REST exp
Rule 38    exp -> exp MORE_EQUAL exp
Rule 39    exp -> exp MORETHAN exp
Rule 40    exp -> exp LESS_EQUAL exp
Rule 41    exp -> exp LESSTHAN exp
Rule 42    exp -> exp AS exp
Rule 43    exp -> exp IS exp
Rule 44    exp -> exp IS_EXCLAMATION exp
Rule 45    exp -> exp EQUAL exp
Rule 46    exp -> exp EXCLAMATION_EQUAL exp
Rule 47    exp -> exp AND exp
Rule 48    exp -> exp OR exp
Rule 49    exp -> exp IF_NULL exp
Rule 50    exp -> exp INTERROGATION exp COLON exp
Rule 51    exp -> exp MULTIPLICATION_EQUAL exp
Rule 52    exp -> exp DIVIDE_EQUAL exp
Rule 53    exp -> exp SOMA_EQUAL exp
Rule 54    exp -> exp SUB_EQUAL exp
Rule 55    exp -> exp MORE_MORE
Rule 56    exp -> exp LESS_LESS
Rule 57    exp -> LPAREN exp RPAREN
Rule 58    exp -> AWAIT exp
Rule 59    exp -> DOT_DOT exp
Rule 60    exp -> INTERROGATION DOT_DOT exp
Rule 61    exp -> call
Rule 62    exp -> ID RECEIVE_VALUE exp
Rule 63    exp -> ID
Rule 64    exp -> NUM_INT
Rule 65    exp -> NUM_DOUBLE
Rule 66    exp -> STR_STRING
Rule 67    exp -> BOO_BOOLEAN
Rule 68    params -> exp VIRGULA params
Rule 69    params -> exp
Rule 70    assign -> ID RECEIVE_VALUE exp
Rule 71    tipo -> TIPO_DOUBLE
Rule 72    tipo -> TIPO_INT
Rule 73    tipo -> TIPO_STRING
Rule 74    tipo -> TIPO_BOOLEAN
Rule 75    tipo -> TIPO_VOID

Terminals, with rules where they appear

ABSTRACT             : 
ALL                  : 
AND                  : 47
AS                   : 42
ASSERTS              : 
ASYNC                : 
AT_SIGN              : 
AWAIT                : 58
BOO_BOOLEAN          : 67
BREAK                : 
CASE                 : 
CATCH                : 
CLASS                : 
COLON                : 50
COMMENT              : 
COMMERCIAL_E         : 
CONST                : 
CONTINUE             : 
COVARIANT            : 
DEFAULT              : 
DEFERRED             : 
DIVIDE               : 36
DIVIDE_EQUAL         : 52
DO                   : 
DOT                  : 
DOT_DOT              : 59 60
DYNAMIC              : 
ELSE                 : 16 17
ENUM                 : 
EQUAL                : 45
EXCLAMATION          : 
EXCLAMATION_EQUAL    : 46
EXPORT               : 
EXTENDS              : 
EXTENSION            : 
EXTERNAL             : 
FACTORY              : 
FALSE                : 
FINAL                : 
FINALLY              : 
FOR                  : 24 25
FUNCTION             : 
GET                  : 
HIDE                 : 
ID                   : 6 8 9 10 11 25 25 31 32 62 63 70
IF                   : 23
IF_NULL              : 49
IMPLEMENTS           : 
IMPORTS              : 
IN                   : 25
INTERFACE            : 
INTERROGATION        : 6 24 24 24 50 60
IS                   : 43
IS_EXCLAMATION       : 44
LATE                 : 
LBRACKET             : 
LCHAV                : 12 13
LESS                 : 34
LESSTHAN             : 41
LESS_EQUAL           : 40
LESS_LESS            : 56
LIBRARY              : 
LPAREN               : 8 9 21 23 24 25 31 32 57
MIXIN                : 
MORE                 : 33
MORETHAN             : 39
MORE_EQUAL           : 38
MORE_MORE            : 55
MULTIPLICATION       : 35
MULTIPLICATION_EQUAL : 51
NEW                  : 
NULL                 : 
NUM_DOUBLE           : 65
NUM_INT              : 64
ON                   : 
OPERATOR             : 
OR                   : 48
PART                 : 
RBRACKET             : 
RCHAV                : 12 13
RECEIVE_VALUE        : 62 70
REQUIRED             : 
REST                 : 37
RETHROW              : 
RETURN               : 22
RPAREN               : 8 9 21 23 24 25 31 32 57
SEMI_COLON           : 5 6 20 22 24 24
SET                  : 
SHOW                 : 
SOMA_EQUAL           : 53
SPACE                : 
STATIC               : 
STR_STRING           : 66
SUB_EQUAL            : 54
SUPER                : 
SWITCH               : 
SYNC                 : 
THIS                 : 
THROW                : 
TIPO_BOOLEAN         : 74
TIPO_DOUBLE          : 71
TIPO_INT             : 72
TIPO_STRING          : 73
TIPO_VOID            : 75
TRUE                 : 
TRY                  : 
TYPEDEF              : 
VAR                  : 
VIRGULA              : 11 30 68
WHILE                : 21
WITH                 : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

assign               : 5 27 29 30
body                 : 7 15 16 17 17 21 24 25
bodyorstm            : 23
call                 : 61
declvar              : 3 4 26
exp                  : 20 21 22 23 24 24 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 50 51 51 52 52 53 53 54 54 55 56 57 58 59 60 62 68 69 70
funcdecl             : 1 2
params               : 31 68
program              : 2 4 0
sigParams            : 8 11
signature            : 7
stm                  : 14 16 18 19
stms                 : 12 19
tipo                 : 5 6 8 9 10 11 25 27 28
tipoassigns          : 28 30
tiposassign          : 24

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) program -> . declvar
    (4) program -> . declvar program
    (7) funcdecl -> . signature body
    (5) declvar -> . tipo assign SEMI_COLON
    (6) declvar -> . tipo INTERROGATION ID SEMI_COLON
    (8) signature -> . tipo ID LPAREN sigParams RPAREN
    (9) signature -> . tipo ID LPAREN RPAREN
    (71) tipo -> . TIPO_DOUBLE
    (72) tipo -> . TIPO_INT
    (73) tipo -> . TIPO_STRING
    (74) tipo -> . TIPO_BOOLEAN
    (75) tipo -> . TIPO_VOID

    TIPO_DOUBLE     shift and go to state 6
    TIPO_INT        shift and go to state 7
    TIPO_STRING     shift and go to state 8
    TIPO_BOOLEAN    shift and go to state 9
    TIPO_VOID       shift and go to state 10

    program                        shift and go to state 1
    funcdecl                       shift and go to state 2
    declvar                        shift and go to state 3
    signature                      shift and go to state 4
    tipo                           shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> funcdecl .
    (2) program -> funcdecl . program
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) program -> . declvar
    (4) program -> . declvar program
    (7) funcdecl -> . signature body
    (5) declvar -> . tipo assign SEMI_COLON
    (6) declvar -> . tipo INTERROGATION ID SEMI_COLON
    (8) signature -> . tipo ID LPAREN sigParams RPAREN
    (9) signature -> . tipo ID LPAREN RPAREN
    (71) tipo -> . TIPO_DOUBLE
    (72) tipo -> . TIPO_INT
    (73) tipo -> . TIPO_STRING
    (74) tipo -> . TIPO_BOOLEAN
    (75) tipo -> . TIPO_VOID

    $end            reduce using rule 1 (program -> funcdecl .)
    TIPO_DOUBLE     shift and go to state 6
    TIPO_INT        shift and go to state 7
    TIPO_STRING     shift and go to state 8
    TIPO_BOOLEAN    shift and go to state 9
    TIPO_VOID       shift and go to state 10

    funcdecl                       shift and go to state 2
    program                        shift and go to state 11
    declvar                        shift and go to state 3
    signature                      shift and go to state 4
    tipo                           shift and go to state 5

state 3

    (3) program -> declvar .
    (4) program -> declvar . program
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) program -> . declvar
    (4) program -> . declvar program
    (7) funcdecl -> . signature body
    (5) declvar -> . tipo assign SEMI_COLON
    (6) declvar -> . tipo INTERROGATION ID SEMI_COLON
    (8) signature -> . tipo ID LPAREN sigParams RPAREN
    (9) signature -> . tipo ID LPAREN RPAREN
    (71) tipo -> . TIPO_DOUBLE
    (72) tipo -> . TIPO_INT
    (73) tipo -> . TIPO_STRING
    (74) tipo -> . TIPO_BOOLEAN
    (75) tipo -> . TIPO_VOID

    $end            reduce using rule 3 (program -> declvar .)
    TIPO_DOUBLE     shift and go to state 6
    TIPO_INT        shift and go to state 7
    TIPO_STRING     shift and go to state 8
    TIPO_BOOLEAN    shift and go to state 9
    TIPO_VOID       shift and go to state 10

    declvar                        shift and go to state 3
    program                        shift and go to state 12
    funcdecl                       shift and go to state 2
    signature                      shift and go to state 4
    tipo                           shift and go to state 5

state 4

    (7) funcdecl -> signature . body
    (12) body -> . LCHAV stms RCHAV
    (13) body -> . LCHAV RCHAV

    LCHAV           shift and go to state 14

    body                           shift and go to state 13

state 5

    (5) declvar -> tipo . assign SEMI_COLON
    (6) declvar -> tipo . INTERROGATION ID SEMI_COLON
    (8) signature -> tipo . ID LPAREN sigParams RPAREN
    (9) signature -> tipo . ID LPAREN RPAREN
    (70) assign -> . ID RECEIVE_VALUE exp

    INTERROGATION   shift and go to state 16
    ID              shift and go to state 17

    assign                         shift and go to state 15

state 6

    (71) tipo -> TIPO_DOUBLE .

    INTERROGATION   reduce using rule 71 (tipo -> TIPO_DOUBLE .)
    ID              reduce using rule 71 (tipo -> TIPO_DOUBLE .)


state 7

    (72) tipo -> TIPO_INT .

    INTERROGATION   reduce using rule 72 (tipo -> TIPO_INT .)
    ID              reduce using rule 72 (tipo -> TIPO_INT .)


state 8

    (73) tipo -> TIPO_STRING .

    INTERROGATION   reduce using rule 73 (tipo -> TIPO_STRING .)
    ID              reduce using rule 73 (tipo -> TIPO_STRING .)


state 9

    (74) tipo -> TIPO_BOOLEAN .

    INTERROGATION   reduce using rule 74 (tipo -> TIPO_BOOLEAN .)
    ID              reduce using rule 74 (tipo -> TIPO_BOOLEAN .)


state 10

    (75) tipo -> TIPO_VOID .

    INTERROGATION   reduce using rule 75 (tipo -> TIPO_VOID .)
    ID              reduce using rule 75 (tipo -> TIPO_VOID .)


state 11

    (2) program -> funcdecl program .

    $end            reduce using rule 2 (program -> funcdecl program .)


state 12

    (4) program -> declvar program .

    $end            reduce using rule 4 (program -> declvar program .)


state 13

    (7) funcdecl -> signature body .

    TIPO_DOUBLE     reduce using rule 7 (funcdecl -> signature body .)
    TIPO_INT        reduce using rule 7 (funcdecl -> signature body .)
    TIPO_STRING     reduce using rule 7 (funcdecl -> signature body .)
    TIPO_BOOLEAN    reduce using rule 7 (funcdecl -> signature body .)
    TIPO_VOID       reduce using rule 7 (funcdecl -> signature body .)
    $end            reduce using rule 7 (funcdecl -> signature body .)


state 14

    (12) body -> LCHAV . stms RCHAV
    (13) body -> LCHAV . RCHAV
    (18) stms -> . stm
    (19) stms -> . stm stms
    (20) stm -> . exp SEMI_COLON
    (21) stm -> . WHILE LPAREN exp RPAREN body
    (22) stm -> . RETURN exp SEMI_COLON
    (23) stm -> . IF LPAREN exp RPAREN bodyorstm
    (24) stm -> . FOR LPAREN tiposassign INTERROGATION SEMI_COLON exp INTERROGATION SEMI_COLON exp INTERROGATION RPAREN body
    (25) stm -> . FOR LPAREN tipo ID IN ID RPAREN body
    (26) stm -> . declvar
    (33) exp -> . exp MORE exp
    (34) exp -> . exp LESS exp
    (35) exp -> . exp MULTIPLICATION exp
    (36) exp -> . exp DIVIDE exp
    (37) exp -> . exp REST exp
    (38) exp -> . exp MORE_EQUAL exp
    (39) exp -> . exp MORETHAN exp
    (40) exp -> . exp LESS_EQUAL exp
    (41) exp -> . exp LESSTHAN exp
    (42) exp -> . exp AS exp
    (43) exp -> . exp IS exp
    (44) exp -> . exp IS_EXCLAMATION exp
    (45) exp -> . exp EQUAL exp
    (46) exp -> . exp EXCLAMATION_EQUAL exp
    (47) exp -> . exp AND exp
    (48) exp -> . exp OR exp
    (49) exp -> . exp IF_NULL exp
    (50) exp -> . exp INTERROGATION exp COLON exp
    (51) exp -> . exp MULTIPLICATION_EQUAL exp
    (52) exp -> . exp DIVIDE_EQUAL exp
    (53) exp -> . exp SOMA_EQUAL exp
    (54) exp -> . exp SUB_EQUAL exp
    (55) exp -> . exp MORE_MORE
    (56) exp -> . exp LESS_LESS
    (57) exp -> . LPAREN exp RPAREN
    (58) exp -> . AWAIT exp
    (59) exp -> . DOT_DOT exp
    (60) exp -> . INTERROGATION DOT_DOT exp
    (61) exp -> . call
    (62) exp -> . ID RECEIVE_VALUE exp
    (63) exp -> . ID
    (64) exp -> . NUM_INT
    (65) exp -> . NUM_DOUBLE
    (66) exp -> . STR_STRING
    (67) exp -> . BOO_BOOLEAN
    (5) declvar -> . tipo assign SEMI_COLON
    (6) declvar -> . tipo INTERROGATION ID SEMI_COLON
    (31) call -> . ID LPAREN params RPAREN
    (32) call -> . ID LPAREN RPAREN
    (71) tipo -> . TIPO_DOUBLE
    (72) tipo -> . TIPO_INT
    (73) tipo -> . TIPO_STRING
    (74) tipo -> . TIPO_BOOLEAN
    (75) tipo -> . TIPO_VOID

    RCHAV           shift and go to state 19
    WHILE           shift and go to state 22
    RETURN          shift and go to state 24
    IF              shift and go to state 25
    FOR             shift and go to state 26
    LPAREN          shift and go to state 23
    AWAIT           shift and go to state 31
    DOT_DOT         shift and go to state 32
    INTERROGATION   shift and go to state 27
    ID              shift and go to state 29
    NUM_INT         shift and go to state 34
    NUM_DOUBLE      shift and go to state 35
    STR_STRING      shift and go to state 36
    BOO_BOOLEAN     shift and go to state 37
    TIPO_DOUBLE     shift and go to state 6
    TIPO_INT        shift and go to state 7
    TIPO_STRING     shift and go to state 8
    TIPO_BOOLEAN    shift and go to state 9
    TIPO_VOID       shift and go to state 10

    stms                           shift and go to state 18
    stm                            shift and go to state 20
    exp                            shift and go to state 21
    tipo                           shift and go to state 28
    declvar                        shift and go to state 30
    call                           shift and go to state 33

state 15

    (5) declvar -> tipo assign . SEMI_COLON

    SEMI_COLON      shift and go to state 38


state 16

    (6) declvar -> tipo INTERROGATION . ID SEMI_COLON

    ID              shift and go to state 39


state 17

    (8) signature -> tipo ID . LPAREN sigParams RPAREN
    (9) signature -> tipo ID . LPAREN RPAREN
    (70) assign -> ID . RECEIVE_VALUE exp

    LPAREN          shift and go to state 40
    RECEIVE_VALUE   shift and go to state 41


state 18

    (12) body -> LCHAV stms . RCHAV

    RCHAV           shift and go to state 42


state 19

    (13) body -> LCHAV RCHAV .

    TIPO_DOUBLE     reduce using rule 13 (body -> LCHAV RCHAV .)
    TIPO_INT        reduce using rule 13 (body -> LCHAV RCHAV .)
    TIPO_STRING     reduce using rule 13 (body -> LCHAV RCHAV .)
    TIPO_BOOLEAN    reduce using rule 13 (body -> LCHAV RCHAV .)
    TIPO_VOID       reduce using rule 13 (body -> LCHAV RCHAV .)
    $end            reduce using rule 13 (body -> LCHAV RCHAV .)
    WHILE           reduce using rule 13 (body -> LCHAV RCHAV .)
    RETURN          reduce using rule 13 (body -> LCHAV RCHAV .)
    IF              reduce using rule 13 (body -> LCHAV RCHAV .)
    FOR             reduce using rule 13 (body -> LCHAV RCHAV .)
    LPAREN          reduce using rule 13 (body -> LCHAV RCHAV .)
    AWAIT           reduce using rule 13 (body -> LCHAV RCHAV .)
    DOT_DOT         reduce using rule 13 (body -> LCHAV RCHAV .)
    INTERROGATION   reduce using rule 13 (body -> LCHAV RCHAV .)
    ID              reduce using rule 13 (body -> LCHAV RCHAV .)
    NUM_INT         reduce using rule 13 (body -> LCHAV RCHAV .)
    NUM_DOUBLE      reduce using rule 13 (body -> LCHAV RCHAV .)
    STR_STRING      reduce using rule 13 (body -> LCHAV RCHAV .)
    BOO_BOOLEAN     reduce using rule 13 (body -> LCHAV RCHAV .)
    RCHAV           reduce using rule 13 (body -> LCHAV RCHAV .)
    ELSE            reduce using rule 13 (body -> LCHAV RCHAV .)


state 20
